Added deploy script change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "homepage": "https://resoblade.github.io/reactproject/",
+  "homepage": "https://resoblade.github.io/reactproject",
 
   "name": "react_project",
 
